DropdownItem doesn't use ellipsis for text overflow Fixes carbon-design-system/carbon-components#473

--- a/src/components/dropdown/_dropdown.scss
+++ b/src/components/dropdown/_dropdown.scss
@@ -86,6 +86,8 @@
     padding-bottom: 1rem;
     padding-left: 1rem;
     padding-right: 1.5rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
 
     &:hover,
     &:focus {
